--- a/styles.css
+++ b/styles.css
@@ -19,5 +19,6 @@ html, body {
 .square {
     border: 1px solid black;
     box-sizing: border-box;
+    color: purple 1px;
     flex: 0 0 calc(100% / 16);
 }
