--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ html, body {
     width: 640px;
     height: 640px;
     margin: auto;
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .square {
@@ -21,4 +22,14 @@ html, body {
     box-sizing: border-box;
     color: purple 1px;
     flex: 0 0 calc(100% / 16);
+}
+h1 {
+    color: blue;
+
+}
+body {
+    background-image: url(oardefault.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
